--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
+        "intervention/image-laravel": "^1.4",
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
