--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "@ryangjchandler/alpine-clipboard": "^2.3.0"
+        "@ryangjchandler/alpine-clipboard": "^2.3.0",
+        "flowbite": "^3.0.0"
     }
 }
