--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 /public/build
 /public/hot
 /public/storage
-/public/images
 /storage/*.key
 /storage/pail
 /vendor/*
@@ -23,3 +22,5 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+/public/attachments/
+/public/images/
